Bug 1423507 - Data URL Shared Workers must be shared when the parent origins match, r=bkelly